# OpenNoteScannerPDF

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  Dockerfile  Generate_QRcodes_PDF.py  InstalledPackages.txt  README.md  generate_single_pdf.py  pyproject.toml  pytest.ini  requirement.txt  requirements-dev.txt  requirements.txt  run_server.py
Doc/project_documentation/open_note_scanner/: README.md  utils.md
Doc/project_documentation/open_note_scanner/pdf_generator/: generator.md
Doc/project_documentation/open_note_scanner/pdf_server/: server.md
Doc/project_documentation/open_note_scanner/pdf_server/api/: generate_pdf.md
Scripts/: Multiple_QRcodes.py  ReportLab.py  Single_QRcode.py  report_lab_test.py
Test/: Multiple_QRcodes.py  ReportLab.py  Single_QRcode.py
open_note_scanner/: utils.py
open_note_scanner/pdf_generator/: __init__.py  generator.py
open_note_scanner/pdf_server/: __init__.py  server.py
open_note_scanner/pdf_server/api/: controller.py  generate_pdf.py  routes.py
open_note_scanner/pdf_server/api/tests/: controller_test.py  routes_test.py
open_note_scanner/pdf_server/templates/: 404.html  documentation.html  generate_pdf.html  index.html
open_note_scanner/pdf_server/tests/: server_test.py
open_note_scanner/tests/: api_test.py  dummy_test.py  utils_test.py
